Feat : 회원가입기능 구현 #3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,15 @@
+logging:
+  level:
+    org.springframework.security: DEBUG
+
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
   # .env import
   config:
     import: optional:file:./.env[.properties]
