--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,5 +23,5 @@ spring:
 
   # Jwt
   jwt:
-    secret: life-watch-jwt-secret-key-1234567890!@#
-    access-token-expiration: 3600000 # 1시간
+    secret: ${JWT_SECRET}
+    access-token-expiration: ${JWT_EXPIRATION}
